--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,5 @@
     <string name="Warmi">Warmi</string>
     <string name="Tumi">Tumi</string>
     <string name="Quncha">Quncha</string>
+    <string name="basico">Basico</string>
 </resources>
